--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
   "dependencies": {
     "compression": "^1.7.1",
     "dotenv": "^8.2.0",
+    "lowdb": "^1.0.0",
     "node-cron": "^2.0.3",
-    "node-json-db": "^1.1.0",
     "polka": "next",
     "sentiment": "^5.0.2",
     "sirv": "^0.4.0",
