--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "TODO",
-  "description": "TODO",
-  "version": "0.0.1",
+  "name": "EmotionallyTrending",
+  "description": "Tracking the sentiment of Twitter's trends",
+  "version": "0.1.0",
   "scripts": {
     "dev": "sapper dev",
     "build": "sapper build --legacy",
