--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "dotenv": "^8.2.0",
     "lowdb": "^1.0.0",
     "node-cron": "^2.0.3",
-    "polka": "next",
+    "polka": "^0.5.2",
     "sentiment": "^5.0.2",
     "shortid": "^2.2.15",
     "sirv": "^0.4.0",
