--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "chart.js": "^2.9.3",
     "compression": "^1.7.1",
     "dotenv": "^8.2.0",
-    "lowdb": "^1.0.0",
+    "mongoose": "^5.9.18",
     "node-cron": "^2.0.3",
     "polka": "^0.5.2",
     "sentiment": "^5.0.2",
