--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "test": "run-p --race dev cy:run"
   },
   "dependencies": {
+    "amqp-connection-manager": "^3.2.2",
     "chart.js": "^2.9.3",
     "compression": "^1.7.1",
+    "cron": "^1.8.2",
     "dotenv": "^8.2.0",
     "mongoose": "^5.9.18",
     "node-cron": "^2.0.3",
