--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "amqp-connection-manager": "^3.2.2",
+    "amqplib": "^0.7.1",
     "chart.js": "^2.9.3",
     "compression": "^1.7.1",
     "cron": "^1.8.2",
