--- a/package.json
+++ b/package.json
@@ -1,58 +1,43 @@
 {
-  "name": "EmotionallyTrending",
-  "description": "Tracking the sentiment of Twitter's trends",
-  "version": "0.1.0",
-  "scripts": {
-    "dev": "sapper dev",
-    "build": "sapper build --legacy",
-    "export": "sapper export --legacy",
-    "start": "node __sapper__/build",
-    "cy:run": "cypress run",
-    "cy:open": "cypress open",
-    "test": "run-p --race dev cy:run"
-  },
-  "dependencies": {
-    "amqp-connection-manager": "^3.2.2",
-    "amqplib": "^0.7.1",
-    "chart.js": "^2.9.3",
-    "compression": "^1.7.1",
-    "cron": "^1.8.2",
-    "dotenv": "^8.2.0",
-    "mongoose": "^5.9.18",
-    "node-cron": "^2.0.3",
-    "polka": "^0.5.2",
-    "sentiment": "^5.0.2",
-    "shortid": "^2.2.15",
-    "sirv": "^0.4.0",
-    "twitter": "^1.7.1"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.0.0",
-    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
-    "@babel/plugin-transform-runtime": "^7.0.0",
-    "@babel/preset-env": "^7.0.0",
-    "@babel/runtime": "^7.0.0",
-    "@rollup/plugin-babel": "^5.0.0",
-    "@rollup/plugin-commonjs": "^12.0.0",
-    "@rollup/plugin-node-resolve": "^8.0.0",
-    "@rollup/plugin-replace": "^2.2.0",
-    "husky": "^4.2.5",
-    "lint-staged": "^10.2.7",
-    "npm-run-all": "^4.1.5",
-    "prettier": "^2.0.5",
-    "prettier-plugin-svelte": "^1.1.0",
-    "rollup": "^2.3.4",
-    "rollup-plugin-svelte": "^5.0.1",
-    "rollup-plugin-terser": "^5.3.0",
-    "sapper": "^0.27.0",
-    "svelte": "^3.0.0"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
-  "lint-staged": {
-    "*.{js,css,md,svelte}": "prettier --write"
-  }
+	"name": "sveltekit-upgrade",
+	"version": "0.0.1",
+	"scripts": {
+		"start": "node ./.svelte-kit/build/index.js",
+		"dev": "svelte-kit dev",
+		"build": "svelte-kit build",
+		"package": "svelte-kit package",
+		"preview": "svelte-kit preview",
+		"prepare": "svelte-kit sync",
+		"check": "svelte-check --tsconfig ./tsconfig.json",
+		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
+		"lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
+		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
+	},
+	"devDependencies": {
+		"@sveltejs/adapter-auto": "next",
+		"@sveltejs/kit": "next",
+		"@types/cookie": "^0.4.1",
+		"@typescript-eslint/eslint-plugin": "^5.10.1",
+		"@typescript-eslint/parser": "^5.10.1",
+		"eslint": "^7.32.0",
+		"eslint-config-prettier": "^8.3.0",
+		"eslint-plugin-svelte3": "^3.2.1",
+		"prettier": "^2.5.1",
+		"prettier-plugin-svelte": "^2.5.0",
+		"svelte": "^3.46.0",
+		"svelte-check": "^2.2.6",
+		"svelte-preprocess": "^4.10.1",
+		"tslib": "^2.3.1",
+		"typescript": "~4.6.2"
+	},
+	"type": "module",
+	"dependencies": {
+		"@fontsource/fira-mono": "^4.5.0",
+		"@lukeed/uuid": "^2.0.0",
+		"@sveltejs/adapter-cloudflare-workers": "^1.0.0-next.36",
+		"chart.js": "^3.7.1",
+		"cookie": "^0.4.1",
+		"dotenv": "^16.0.0",
+		"realm-web": "^1.7.0"
+	}
 }
